Fix footer copyright alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,13 +114,13 @@ Address
 ------------------------------------------
 */
 
-.address {
+/* .address {
     margin-top: 1.25rem;
 }
 
 .address p {
     margin: 0.3125rem 0 0.3125rem 0
-}
+} */
 
 /*
 ------------------------------------------
